--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    box-shadow: 5px 5px 10px black;
 }
 
 .search-card {
@@ -95,6 +96,7 @@ span {
     width: 100%;
     box-shadow: 10px 10px 20px black;
     cursor:pointer;
+    border-radius: 4px;
     transition: 500ms;
 }
 
