--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ section {
     max-width: 40px;
     height: 3em;
     margin: 5px;
+    cursor: pointer;
 }
 
 #fetch-btn {
@@ -87,6 +88,7 @@ section {
     max-width: 40px;
     height: 3em;
     margin: 5px;
+    cursor: pointer;
 }
 
 #new-card-container {
