--- a/style.css
+++ b/style.css
@@ -12,57 +12,55 @@
     background-color: rgb(40, 60, 85);
 }
 
+section {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 #ygo-title {
-    color: white;
+    color: #BD7544;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: rgb(44, 44, 44);
     text-align: center;
-    padding: 30px;
+    padding: 40px;
     font-size: 3em;
     text-shadow: 5px 5px 10px black;
 }
 
-section {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .search-box {
     width: 100%;
-    height: 100%;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: top 0.3s;
+    padding:5px;
 }
 
-.search-div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
+.search-box.fixed {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    transition:100ms;
+    background-color:rgb(24, 36, 51);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    height: 60px;
 }
 
-#input-search-two {
+#input-search {
     width: 90%;
     height: 100%;
     border-radius: 10px;
     padding: 10px;
     margin-left: 20px;
     margin-right: 20px;
-}
-
-.btn-container {
-    width: 10%;
-    height: 100%;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    flex-wrap: nowrap;
-    min-width: 100px;
+    flex-grow: 1;
 }
 
 #clear-btn {
@@ -111,6 +109,38 @@ section {
     transform: translate(0, -15px);
     transition: 500ms;
 }
+
+
+
+
+
+
+/* Stili per il bottone torna in alto */
+#scrollToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #333;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+}
+
+#scrollToTopBtn:hover {
+    background-color: #555;
+}
+
+
+
+
+
+
 
 /* media for 4k */
 @media screen and (max-width: 2560px) {
